fixed invisible tble

--- a/css/userstyle.css
+++ b/css/userstyle.css
@@ -223,13 +223,13 @@ button:hover {
   margin-right: 5%;
   text-align: center;
 }
-th, td {
+.tablefin th, .tablefin td {
   border: 0.0625em solid white;
   padding: 0.3125em;
   font-size: 1.5em;
 }
 
-tbody {
+.tablefin tbody {
   text-align: center;
   overflow-y: scroll;
 }
